--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "less": "^3.12.2",
     "vue": "^2.6.11",
+    "vue-loader": "^15.9.5",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^8.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2"
   },
   "browserslist": [
     "> 1%",
